c1/init_game
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:834:17: error: use of undeclared identifier 'unk_41A420'
memcpy( board, &unk_41A420, sizeof( board)); 
                ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:846:12: error: expected expression
*( _OWORD *)is_promoted = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:846:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)is_promoted = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:847:12: error: expected expression
*( _OWORD *)&is_promoted[4] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:847:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[4] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:848:12: error: expected expression
*( _OWORD *)&is_promoted[8] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:848:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[8] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:849:12: error: expected expression
*( _OWORD *)&is_promoted[12] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:849:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[12] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:850:12: error: expected expression
*( _OWORD *)&is_promoted[16] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:850:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[16] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:851:12: error: expected expression
*( _OWORD *)&is_promoted[20] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:851:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[20] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:852:12: error: expected expression
*( _OWORD *)&is_promoted[24] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:852:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[24] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:853:12: error: expected expression
*( _OWORD *)&is_promoted[28] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:853:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[28] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:854:12: error: expected expression
*( _OWORD *)&is_promoted[32] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:854:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[32] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:855:12: error: expected expression
*( _OWORD *)&is_promoted[36] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:855:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[36] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:856:12: error: expected expression
*( _OWORD *)&is_promoted[40] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:856:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[40] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:857:12: error: expected expression
*( _OWORD *)&is_promoted[44] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:857:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[44] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:858:12: error: expected expression
*( _OWORD *)&is_promoted[48] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:858:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[48] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:859:12: error: expected expression
*( _OWORD *)&is_promoted[52] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:859:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[52] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:860:12: error: expected expression
*( _OWORD *)&is_promoted[56] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:860:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[56] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:862:12: error: expected expression
*( _OWORD *)&holding[1][12] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:862:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[1][12] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:863:12: error: expected expression
*( _OWORD *)&holding[1][8] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:863:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[1][8] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:864:12: error: expected expression
*( _OWORD *)&holding[1][4] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:864:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[1][4] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:865:12: error: expected expression
*( _OWORD *)&holding[1][0] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:865:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[1][0] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:866:12: error: expected expression
*( _OWORD *)&holding[0][12] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:866:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[0][12] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:867:12: error: expected expression
*( _OWORD *)&holding[0][8] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:867:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[0][8] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:868:12: error: expected expression
*( _OWORD *)&holding[0][4] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:868:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[0][4] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:869:12: error: expected expression
*( _OWORD *)&holding[0][0] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/utils.c:869:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[0][0] = 0LL; 
   ^
47 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/init_game/src/obj/utils.o] Error 1
